# My-projects-

./: CMakeLists.txt  README.md  TreeNode.h
Assignment 1/: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  Model.cpp  Model.h  README.md  README.txt  Translator.cpp  Translator.h  a.out  main.cpp  output.html  output.txt
Assignment 3/: MonoStack.h  SpeakerView.cpp  SpeakerView.h  main.cpp  reademe.md  sampleInput.txt
Assignment2/: CMakeLists.txt  FileIO.cpp  FileIO.h  Mario.cpp  Mario.h  README  README.txt  World.cpp  World.h  log.txt  main.cpp  mario  output.txt  specs.txt
Assignment4/: CMakeLists.txt  Customer.cpp  Customer.h  DblList.h  ListNode.h  ListQueue.h  Office.cpp  Office.h  README.txt  ServiceCenter.cpp  ServiceCenter.h  Window.cpp  Window.h  main.cpp  sampleInput.txt  test.txt
Assignment5/: .gitignore  BST.h  CMakeLists.txt  DataBase.cpp  DataBase.h  Faculty.cpp  Faculty.h  LazyBST.h  ListNode.h  Menu.cpp  Menu.h  README.txt  Student.cpp  Student.h  Terminal.cpp  Terminal.h  TreeNode.h  main.cpp  runLog.txt  tree.txt  treedata.txt
